NESPARK-185: 定义Kyuubi-Cluster相关参数